fixed bootRun task and updated readme